--- a/FootballMatchPredictor/Views/Match/CreateMatch.cshtml
+++ b/FootballMatchPredictor/Views/Match/CreateMatch.cshtml
@@ -1,5 +1,40 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using FootballMatchPredictor.Domain.ViewModels.Match
+
+@model CreateMatchViewModel
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <form id="createMatchForm">
+                <div class="form-group">
+                    <label asp-for="Team1Id" class="form-label">Первая команда</label>
+                    <select asp-for="Team1Id" class="form-control" id="team1Select" data-minimum-results-for-search="Infinity" style="width:100%;">
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Team2Id" class="form-label">Вторая команда</label>
+                    <select asp-for="Team2Id" class="form-control" id="team2Select" data-minimum-results-for-search="Infinity" style="width:100%;">
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="MatchDate" class="form-label">Дата и время матча</label>
+                    <input type="datetime" asp-for="MatchDate" class="form-control" value="@DateTime.UtcNow">
+                </div>
+                <div class="text-center mt-3">
+                    <button type="button" class="btn btn-success br-40 text-white"
+                            onclick="doActionWithPopupWindow(event, { url: '/Match/CreateMatch', formId: 'createMatchForm' })">
+                        Создать
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script>
+    initSelect2ForEnum({ url: '/Team/GetTeamDictionary', selectId: 'team1Select', placeholder: 'Выберите команду', isModal: true });
+</script>
+
+<script>
+    initSelect2ForEnum({ url: '/Team/GetTeamDictionary', selectId: 'team2Select', placeholder: 'Выберите команду', isModal: true });
+</script>
