Добавил метод Эло для расчёта коэффициентов, рейтинга команд, и вероятности разных исходов при создании матча

--- a/FootballMatchPredictor/Views/Match/GetMatches.cshtml
+++ b/FootballMatchPredictor/Views/Match/GetMatches.cshtml
@@ -19,6 +19,15 @@
                 <p>
                     @match.Team2Name
                 </p>
+                <p>
+                    Вероятность победы первой команды: @match.Team1WinRate
+                </p>
+                <p>
+                    Вероятность победы второй команды: @match.Team2WinRate
+                </p>
+                <p>
+                    Вероятность ничьи: @match.DrawProbability
+                </p>
             </div>
             <div class="col-md-3">
                 <p class="fw-bold">
