--- a/FootballMatchPredictor/Views/Match/GetTeamMatches.cshtml
+++ b/FootballMatchPredictor/Views/Match/GetTeamMatches.cshtml
@@ -26,6 +26,15 @@
                 <p>
                     @teamMatch.Team2GoalsCount
                 </p>
+                <p>
+                    Вероятность победы первой команды: @teamMatch.Team1WinRate
+                </p>
+                <p>
+                    Вероятность победы второй команды: @teamMatch.Team2WinRate
+                </p>
+                <p>
+                    Вероятность ничьи: @teamMatch.DrawProbability
+                </p>
             </div>
             <div class="col-md-3">
                 <p>
