--- a/FootballMatchPredictor/Views/Team/GetTeam.cshtml
+++ b/FootballMatchPredictor/Views/Team/GetTeam.cshtml
@@ -21,8 +21,8 @@
                     <input type="number" asp-for="MatchesPlayed" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label asp-for="MatchesWon" class="form-label">Матчей выиграно</label>
-                    <input type="number" asp-for="MatchesWon" class="form-control">
+                    <label asp-for="Rating" class="form-label">Рейтинг команды</label>
+                    <input type="number" asp-for="Rating" class="form-control">
                 </div>
                 <div class="text-center mt-3">
                     <button type="button" class="btn bg-indigo br-40 text-white"
